# Saiba-editor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  configure  editor.cpp  editor_build
.github/workflows/: cmake-multi-platform.yml
asm/: custom_syscall.S
aux/logger/: Logger.hpp
include/: Editor.hpp  Screen.hpp
src/: Editor.cpp  Screen.cpp
